--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
-.test {
-    color: deepskyblue;
-}
+// Layout-related sections
+@import "layout/header";
+
+// Components
+@import "components/forms";
