--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -11,6 +11,14 @@
     }
 }
 
+form {
+    input {
+        outline: none !important;
+        border: none !important;
+        border-bottom: 1px solid #1d89ff !important;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .eye-text img {
         height: 24px;
