--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -11,6 +11,18 @@
     }
 }
 
+.tooltip-arrow {
+    position: relative;
+
+    img {
+        position: absolute;
+        left: 90px;
+        top: -5px;
+        height: 32px;
+        width: 32px;
+    }
+}
+
 form {
     input {
         outline: none !important;
