building out home components

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -12,7 +12,7 @@ $line-height-base: 1.6;
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
-$purple: #9561e2;
+$purple: #5741d9;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
@@ -21,3 +21,8 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $main-blue: #4d89ff;
+$main-white: #ffffff;
+$blue-purple: #5409c8;
+$dark-blue: #0d0c52;
+$salmon: #ff8b8b;
+$tan: #feb58d;
