--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,7 +9,7 @@
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
-  --purple: #9561e2;
+  --purple: #5741d9;
   --pink: #f66d9b;
   --red: #e3342f;
   --orange: #f6993f;
@@ -10027,6 +10027,10 @@ nav .dropdown-item {
   background: none !important;
 }
 
+.main-header {
+  margin-top: 7rem !important;
+}
+
 .main-blue {
   color: #4d89ff;
 }
@@ -10332,4 +10336,10 @@ form select {
   background: #eeecfb;
   width: 100%;
   height: 1px;
+}
+
+.section-1 {
+  background: #5409c8;
+  height: 390px;
+  width: 100%;
 }
