--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10340,9 +10340,58 @@ form select {
 
 .section-1 {
   background: #5409c8;
-  height: 390px;
+  height: 700px;
   width: 100%;
 }
-.section-1 .test div {
-  margin-top: 195px;
+.section-1 h1 {
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 64px;
+  margin-bottom: 2rem;
+}
+.section-1 p {
+  color: #ffffff;
+  font-size: 24px;
+}
+.section-1 button {
+  color: #5741d9 !important;
+}
+
+.section-2 {
+  background: #ffffff;
+  height: 600px;
+  width: 100%;
+}
+.section-2 h3 {
+  font-weight: 700;
+  color: #000000;
+  font-size: 28px;
+  margin-bottom: 2rem;
+}
+.section-2 p {
+  color: #000000;
+  font-size: 28px;
+}
+.section-2 button {
+  color: #5741d9 !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .section-1 {
+    height: 1100px;
+  }
+
+  h1 {
+    font-size: 42px;
+    padding: 20px;
+  }
+
+  p {
+    font-size: 16px;
+    padding: 20px;
+  }
+
+  a {
+    padding: 20px;
+  }
 }
