--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -1,7 +1,8 @@
 .section-1 {
     background: $blue-purple;
-    height: 700px;
+    height: 650px;
     width: 100%;
+    //margin-top: 1.5rem;
 
     h1 {
         font-weight: 700;
@@ -18,13 +19,36 @@
     button {
         color: $purple !important;
     }
+
+    .item-1 {
+        margin-top: 148px;
+    }
+
+    .item-2 {
+        margin-top: 148px;
+    }
 }
 
+// section 2
 .section-2 {
     background: $main-white;
-    height: 600px;
+    height: 525px;
     width: 100%;
-    margin-top: 1.5rem;
+    //margin-top: 1.5rem;
+
+    .test {
+        overflow: hidden;
+    }
+
+    a {
+        text-decoration: none;
+    }
+    a:hover {
+        p {
+            color: #d5d5d5;
+            transition: 0.3s;
+        }
+    }
 
     h3 {
         font-weight: 700;
@@ -36,10 +60,6 @@
     p {
         color: #0e0c28;
         font-size: 28px;
-    }
-
-    .test {
-        overflow-x: scroll;
     }
 
     .item-1 {
@@ -74,6 +94,33 @@
     }
 }
 
+// section 3
+.section-3 {
+    background: $dark-blue;
+    height: 600px;
+    width: 100%;
+
+    h1 {
+        font-weight: 700;
+        color: #ffffff;
+        font-size: 64px;
+        margin-bottom: 2rem;
+    }
+
+    p {
+        color: #ffffff;
+        font-size: 24px;
+    }
+
+    .item-1 {
+        margin-top: 148px;
+    }
+
+    .item-2 {
+        margin-top: 148px;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .section-1 {
         height: 1100px;
@@ -81,19 +128,29 @@
 
     h1 {
         font-size: 42px;
-        padding: 20px;
+        //padding: 20px;
+    }
+
+    h3 {
+        //padding: 20px;
     }
 
     p {
         font-size: 16px;
-        padding: 20px;
+        //padding: 20px;
     }
 
     a {
-        padding: 20px;
+        //padding: 20px;
     }
 
     .section-2 {
-        height: 1100px;
+        // height: 1100px;
+
+        .test {
+            flex-wrap: nowrap !important;
+            z-index: 9 !important;
+            overflow-x: scroll !important;
+        }
     }
 }
