--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10332,7 +10332,7 @@ form select {
   text-decoration: none !important;
 }
 
-.login-help-links-divider {
+.light-divider {
   background: #eeecfb;
   width: 100%;
   height: 1px;
