building out edit profile form

--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -50,6 +50,10 @@ form {
         border: 1px solid $main-blue !important;
     }
 
+    textarea {
+        border: 1px solid $main-blue !important;
+    }
+
     a {
         text-decoration: none !important;
     }
