--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10077,6 +10077,9 @@ form input {
 form select {
   border: 1px solid #4d89ff !important;
 }
+form textarea {
+  border: 1px solid #4d89ff !important;
+}
 form a {
   text-decoration: none !important;
 }
