--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,11 @@
 // Body
+// light
 //$body-bg: #f8fafc;
 $body-bg: #faf9f8;
+
+// dark
+//$body-bg: #2f3136;
+//$body-bg: #36393f;
 
 // Typography
 //$font-family-sans-serif: 'Nunito', sans-serif;
