--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 
 // Layout-related sections
 @import "layout/header";
+@import "layout/profile-sidebar";
 
 // Components
 @import "components/forms";
