--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@
 @import "layout/private-profile-sidebar";
 
 // Components
+@import "components/dividers";
 @import "components/forms";
 @import "components/loaders";
 
