building profile page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,7 +19,7 @@ $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #5741d9;
 $pink: #f66d9b;
-$red: #e3342f;
+//$red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
@@ -31,3 +31,4 @@ $blue-purple: #5409c8;
 $dark-blue: #0d0c52;
 $salmon: #ff8b8b;
 $tan: #feb58d;
+$red: #ed4245;
