update email logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10422,7 +10422,7 @@ form a {
   text-decoration: none;
 }
 .section-2 a:hover p {
-  color: #d5d5d5;
+  color: #dfdddd;
   transition: 0.3s;
 }
 .section-2 h3 {
