--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -45,7 +45,7 @@
     }
     a:hover {
         p {
-            color: #d5d5d5;
+            color: #dfdddd;
             transition: 0.3s;
         }
     }
