updating profile css for responsiveness

--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -1,3 +1,46 @@
 .private-profile-main-container {
     height: calc(100vh - 67px);
 }
+
+.private-profile-sidebar-container {
+    width: 25%;
+    background: #f2f3f5;
+}
+
+.private-profile-sidebar-cat-head {
+    color: #6a7480;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.private-profile-sidebar-cat-content {
+    color: #2e3338;
+    font-size: 16px;
+}
+.private-profile-sidebar-cat-content:hover {
+    cursor: pointer;
+    color: #6a7480;
+}
+
+.content-active {
+    color: $blue-purple-two;
+    font-weight: 900;
+}
+.content-active:hover {
+    cursor: default;
+    color: $blue-purple-two;
+}
+
+@media only screen and (max-width: 600px) {
+    // .private-profile-main-container {
+    //     height: 100%;
+    // }
+
+    .private-profile-sidebar-container {
+        width: 100%;
+    }
+
+    .private-profile-sidebar-divider {
+        display: none;
+    }
+}
