--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -32,9 +32,9 @@
 }
 
 @media only screen and (max-width: 600px) {
-    // .private-profile-main-container {
-    //     height: 100%;
-    // }
+    .private-profile-main-container {
+        height: 100%;
+    }
 
     .private-profile-sidebar-container {
         width: 100%;
