--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -4,7 +4,8 @@
 
 .private-profile-sidebar-container {
     width: 25%;
-    background: #f2f3f5;
+    //background: #f2f3f5;
+    background: #f4f5f7;
 }
 
 .private-profile-sidebar-cat-head {
