building out appearance comp

--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -4,8 +4,7 @@
 
 .private-profile-sidebar-container {
     width: 25%;
-    //background: #f2f3f5;
-    background: #f4f5f7;
+    background: $profile-sidebar-light-bg;
 }
 
 .private-profile-sidebar-cat-head {
