--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -31,6 +31,11 @@
     color: $blue-purple-two;
 }
 
+// .happy-face {
+//     height: 32px;
+//     width: 32px;
+// }
+
 @media only screen and (max-width: 600px) {
     .private-profile-main-container {
         height: 100%;
