building out appearance comp

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,11 +22,11 @@ $pink: #f66d9b;
 //$red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #38c172;
+$green: #00ff00;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $main-blue: #4d89ff;
-$main-white: #ffffff;
+$main-white: #f6f7f9;
 $blue-purple: #5409c8;
 $dark-blue: #0d0c52;
 $salmon: #ff8b8b;
