--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10547,6 +10547,18 @@ form a {
   background: #f4f5f7;
 }
 
+.appearance-font-color-red {
+  color: #ed4245;
+}
+
+.appearance-font-color-blue {
+  color: #3490dc;
+}
+
+.appearance-font-color-green {
+  color: #00ff00;
+}
+
 @media only screen and (max-width: 600px) {
   .private-profile-main-container {
     height: 100%;
