--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -35,4 +35,5 @@ $red: #ed4245;
 $test: #4752c4;
 $blue-purple-two: #3752c4;
 $dark-theme: #2f3136;
+$chat-bg: #212428;
 $profile-sidebar-light-bg: #f4f5f7;
