building out appearance comp

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10536,7 +10536,7 @@ form a {
   color: #3752c4;
 }
 
-.chat-preview-happy-face {
+.chat-preview-default-photo {
   height: 64px;
   width: 64px;
   border-radius: 50%;
