--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -31,7 +31,7 @@
     color: $blue-purple-two;
 }
 
-.chat-preview-happy-face {
+.chat-preview-default-photo {
     height: 64px;
     width: 64px;
     border-radius: 50%;
