building out appearance comp

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -36,4 +36,7 @@ $test: #4752c4;
 $blue-purple-two: #3752c4;
 $dark-theme: #2f3136;
 $chat-bg: #212428;
+$space-gray: #343d52;
+$gray-dolphin: #5c5858;
+$black: #050505;
 $profile-sidebar-light-bg: #f4f5f7;
