--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -51,6 +51,27 @@
 .appearance-font-color-green {
     color: $green;
 }
+.appearance-font-color-orange {
+    color: $orange;
+}
+.appearance-font-color-pink {
+    color: $pink;
+}
+.appearance-font-color-purple {
+    color: $purple;
+}
+.appearance-font-color-white {
+    color: $main-white;
+}
+.appearance-font-color-black {
+    color: $black;
+}
+.appearance-font-color-spacegray {
+    color: $space-gray;
+}
+.appearance-font-color-graydolphin {
+    color: $gray-dolphin;
+}
 
 @media only screen and (max-width: 600px) {
     .private-profile-main-container {
