--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,7 +53,7 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(5, 5, 5, 0);
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -423,7 +423,7 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgba(5, 5, 5, 0.1);
 }
 
 small,
@@ -1696,12 +1696,12 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(5, 5, 5, 0.05);
 }
 
 .table-hover tbody tr:hover {
   color: #212529;
-  background-color: rgba(0, 0, 0, 0.075);
+  background-color: rgba(5, 5, 5, 0.075);
 }
 
 .table-primary,
@@ -1867,7 +1867,7 @@ pre code {
 .table-active,
 .table-active > th,
 .table-active > td {
-  background-color: rgba(0, 0, 0, 0.075);
+  background-color: rgba(5, 5, 5, 0.075);
 }
 
 .table-hover .table-active:hover {
@@ -2995,7 +2995,7 @@ input[type=button].btn-block {
   list-style: none;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(5, 5, 5, 0.15);
   border-radius: 0.25rem;
 }
 
@@ -4268,41 +4268,41 @@ input[type=button].btn-block {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(5, 5, 5, 0.9);
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(5, 5, 5, 0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(5, 5, 5, 0.5);
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(5, 5, 5, 0.7);
 }
 .navbar-light .navbar-nav .nav-link.disabled {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba(5, 5, 5, 0.3);
 }
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(5, 5, 5, 0.9);
 }
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.5);
-  border-color: rgba(0, 0, 0, 0.1);
+  color: rgba(5, 5, 5, 0.5);
+  border-color: rgba(5, 5, 5, 0.1);
 }
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%285, 5, 5, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(5, 5, 5, 0.5);
 }
 .navbar-light .navbar-text a {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(5, 5, 5, 0.9);
 }
 .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(5, 5, 5, 0.9);
 }
 
 .navbar-dark .navbar-brand {
@@ -4351,7 +4351,7 @@ input[type=button].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid rgba(5, 5, 5, 0.125);
   border-radius: 0.25rem;
 }
 .card > hr {
@@ -4406,8 +4406,8 @@ input[type=button].btn-block {
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  background-color: rgba(5, 5, 5, 0.03);
+  border-bottom: 1px solid rgba(5, 5, 5, 0.125);
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
@@ -4415,8 +4415,8 @@ input[type=button].btn-block {
 
 .card-footer {
   padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  background-color: rgba(5, 5, 5, 0.03);
+  border-top: 1px solid rgba(5, 5, 5, 0.125);
 }
 .card-footer:last-child {
   border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
@@ -4858,7 +4858,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #1b4b72;
+  color: #1d4d75;
   background-color: #d6e9f8;
   border-color: #c6e0f5;
 }
@@ -4866,11 +4866,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #b0d4f1;
 }
 .alert-primary .alert-link {
-  color: #113049;
+  color: #13324c;
 }
 
 .alert-secondary {
-  color: #383d41;
+  color: #3b3f43;
   background-color: #e2e3e5;
   border-color: #d6d8db;
 }
@@ -4878,11 +4878,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #c8cbcf;
 }
 .alert-secondary .alert-link {
-  color: #202326;
+  color: #232628;
 }
 
 .alert-success {
-  color: #008500;
+  color: #028702;
   background-color: #ccffcc;
   border-color: #b8ffb8;
 }
@@ -4890,11 +4890,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #9fff9f;
 }
 .alert-success .alert-link {
-  color: #005200;
+  color: #015501;
 }
 
 .alert-info {
-  color: #385d7a;
+  color: #3b5f7d;
   background-color: #e2f0fb;
   border-color: #d6e9f9;
 }
@@ -4902,11 +4902,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #c0ddf6;
 }
 .alert-info .alert-link {
-  color: #284257;
+  color: #2b455a;
 }
 
 .alert-warning {
-  color: #857b26;
+  color: #877e29;
   background-color: #fffbdb;
   border-color: #fffacc;
 }
@@ -4914,11 +4914,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #fff8b3;
 }
 .alert-warning .alert-link {
-  color: #5d561b;
+  color: #60591d;
 }
 
 .alert-danger {
-  color: #7b2224;
+  color: #7e2526;
   background-color: #fbd9da;
   border-color: #facacb;
 }
@@ -4926,11 +4926,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #f8b3b4;
 }
 .alert-danger .alert-link {
-  color: #531718;
+  color: #57191a;
 }
 
 .alert-light {
-  color: #818182;
+  color: #838484;
   background-color: #fefefe;
   border-color: #fdfdfe;
 }
@@ -4938,11 +4938,11 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #ececf6;
 }
 .alert-light .alert-link {
-  color: #686868;
+  color: #6a6a6a;
 }
 
 .alert-dark {
-  color: #1b1e21;
+  color: #1d2124;
   background-color: #d6d8d9;
   border-color: #c6c8ca;
 }
@@ -4950,7 +4950,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-top-color: #b9bbbe;
 }
 .alert-dark .alert-link {
-  color: #040505;
+  color: #060708;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -5051,7 +5051,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid rgba(5, 5, 5, 0.125);
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -5210,115 +5210,115 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #1b4b72;
+  color: #1d4d75;
   background-color: #c6e0f5;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #1b4b72;
+  color: #1d4d75;
   background-color: #b0d4f1;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #1b4b72;
-  border-color: #1b4b72;
+  background-color: #1d4d75;
+  border-color: #1d4d75;
 }
 
 .list-group-item-secondary {
-  color: #383d41;
+  color: #3b3f43;
   background-color: #d6d8db;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #383d41;
+  color: #3b3f43;
   background-color: #c8cbcf;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #383d41;
-  border-color: #383d41;
+  background-color: #3b3f43;
+  border-color: #3b3f43;
 }
 
 .list-group-item-success {
-  color: #008500;
+  color: #028702;
   background-color: #b8ffb8;
 }
 .list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
-  color: #008500;
+  color: #028702;
   background-color: #9fff9f;
 }
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: #008500;
-  border-color: #008500;
+  background-color: #028702;
+  border-color: #028702;
 }
 
 .list-group-item-info {
-  color: #385d7a;
+  color: #3b5f7d;
   background-color: #d6e9f9;
 }
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
-  color: #385d7a;
+  color: #3b5f7d;
   background-color: #c0ddf6;
 }
 .list-group-item-info.list-group-item-action.active {
   color: #fff;
-  background-color: #385d7a;
-  border-color: #385d7a;
+  background-color: #3b5f7d;
+  border-color: #3b5f7d;
 }
 
 .list-group-item-warning {
-  color: #857b26;
+  color: #877e29;
   background-color: #fffacc;
 }
 .list-group-item-warning.list-group-item-action:hover, .list-group-item-warning.list-group-item-action:focus {
-  color: #857b26;
+  color: #877e29;
   background-color: #fff8b3;
 }
 .list-group-item-warning.list-group-item-action.active {
   color: #fff;
-  background-color: #857b26;
-  border-color: #857b26;
+  background-color: #877e29;
+  border-color: #877e29;
 }
 
 .list-group-item-danger {
-  color: #7b2224;
+  color: #7e2526;
   background-color: #facacb;
 }
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #7b2224;
+  color: #7e2526;
   background-color: #f8b3b4;
 }
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #7b2224;
-  border-color: #7b2224;
+  background-color: #7e2526;
+  border-color: #7e2526;
 }
 
 .list-group-item-light {
-  color: #818182;
+  color: #838484;
   background-color: #fdfdfe;
 }
 .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
-  color: #818182;
+  color: #838484;
   background-color: #ececf6;
 }
 .list-group-item-light.list-group-item-action.active {
   color: #fff;
-  background-color: #818182;
-  border-color: #818182;
+  background-color: #838484;
+  border-color: #838484;
 }
 
 .list-group-item-dark {
-  color: #1b1e21;
+  color: #1d2124;
   background-color: #c6c8ca;
 }
 .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-  color: #1b1e21;
+  color: #1d2124;
   background-color: #b9bbbe;
 }
 .list-group-item-dark.list-group-item-action.active {
   color: #fff;
-  background-color: #1b1e21;
-  border-color: #1b1e21;
+  background-color: #1d2124;
+  border-color: #1d2124;
 }
 
 .close {
@@ -5326,12 +5326,12 @@ a.badge-dark:focus, a.badge-dark.focus {
   font-size: 1.35rem;
   font-weight: 700;
   line-height: 1;
-  color: #000;
+  color: #050505;
   text-shadow: 0 1px 0 #fff;
   opacity: 0.5;
 }
 .close:hover {
-  color: #000;
+  color: #050505;
   text-decoration: none;
 }
 .close:not(:disabled):not(.disabled):hover, .close:not(:disabled):not(.disabled):focus {
@@ -5355,7 +5355,7 @@ a.close.disabled {
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.25rem 0.75rem rgba(5, 5, 5, 0.1);
   opacity: 0;
   border-radius: 0.25rem;
 }
@@ -5480,7 +5480,7 @@ a.close.disabled {
   pointer-events: auto;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(5, 5, 5, 0.2);
   border-radius: 0.3rem;
   outline: 0;
 }
@@ -5492,7 +5492,7 @@ a.close.disabled {
   z-index: 1040;
   width: 100vw;
   height: 100vh;
-  background-color: #000;
+  background-color: #050505;
 }
 .modal-backdrop.fade {
   opacity: 0;
@@ -5634,7 +5634,7 @@ a.close.disabled {
 .bs-tooltip-top .arrow::before, .bs-tooltip-auto[x-placement^=top] .arrow::before {
   top: 0;
   border-width: 0.4rem 0.4rem 0;
-  border-top-color: #000;
+  border-top-color: #050505;
 }
 
 .bs-tooltip-right, .bs-tooltip-auto[x-placement^=right] {
@@ -5648,7 +5648,7 @@ a.close.disabled {
 .bs-tooltip-right .arrow::before, .bs-tooltip-auto[x-placement^=right] .arrow::before {
   right: 0;
   border-width: 0.4rem 0.4rem 0.4rem 0;
-  border-right-color: #000;
+  border-right-color: #050505;
 }
 
 .bs-tooltip-bottom, .bs-tooltip-auto[x-placement^=bottom] {
@@ -5660,7 +5660,7 @@ a.close.disabled {
 .bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^=bottom] .arrow::before {
   bottom: 0;
   border-width: 0 0.4rem 0.4rem;
-  border-bottom-color: #000;
+  border-bottom-color: #050505;
 }
 
 .bs-tooltip-left, .bs-tooltip-auto[x-placement^=left] {
@@ -5674,7 +5674,7 @@ a.close.disabled {
 .bs-tooltip-left .arrow::before, .bs-tooltip-auto[x-placement^=left] .arrow::before {
   left: 0;
   border-width: 0.4rem 0 0.4rem 0.4rem;
-  border-left-color: #000;
+  border-left-color: #050505;
 }
 
 .tooltip-inner {
@@ -5682,7 +5682,7 @@ a.close.disabled {
   padding: 0.25rem 0.5rem;
   color: #fff;
   text-align: center;
-  background-color: #000;
+  background-color: #050505;
   border-radius: 0.25rem;
 }
 
@@ -5711,7 +5711,7 @@ a.close.disabled {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(5, 5, 5, 0.2);
   border-radius: 0.3rem;
 }
 .popover .arrow {
@@ -5738,7 +5738,7 @@ a.close.disabled {
 .bs-popover-top > .arrow::before, .bs-popover-auto[x-placement^=top] > .arrow::before {
   bottom: 0;
   border-width: 0.5rem 0.5rem 0;
-  border-top-color: rgba(0, 0, 0, 0.25);
+  border-top-color: rgba(5, 5, 5, 0.25);
 }
 .bs-popover-top > .arrow::after, .bs-popover-auto[x-placement^=top] > .arrow::after {
   bottom: 1px;
@@ -5758,7 +5758,7 @@ a.close.disabled {
 .bs-popover-right > .arrow::before, .bs-popover-auto[x-placement^=right] > .arrow::before {
   left: 0;
   border-width: 0.5rem 0.5rem 0.5rem 0;
-  border-right-color: rgba(0, 0, 0, 0.25);
+  border-right-color: rgba(5, 5, 5, 0.25);
 }
 .bs-popover-right > .arrow::after, .bs-popover-auto[x-placement^=right] > .arrow::after {
   left: 1px;
@@ -5775,7 +5775,7 @@ a.close.disabled {
 .bs-popover-bottom > .arrow::before, .bs-popover-auto[x-placement^=bottom] > .arrow::before {
   top: 0;
   border-width: 0 0.5rem 0.5rem 0.5rem;
-  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-bottom-color: rgba(5, 5, 5, 0.25);
 }
 .bs-popover-bottom > .arrow::after, .bs-popover-auto[x-placement^=bottom] > .arrow::after {
   top: 1px;
@@ -5805,7 +5805,7 @@ a.close.disabled {
 .bs-popover-left > .arrow::before, .bs-popover-auto[x-placement^=left] > .arrow::before {
   right: 0;
   border-width: 0.5rem 0 0.5rem 0.5rem;
-  border-left-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(5, 5, 5, 0.25);
 }
 .bs-popover-left > .arrow::after, .bs-popover-auto[x-placement^=left] > .arrow::after {
   right: 1px;
@@ -7424,15 +7424,15 @@ button.bg-dark:focus {
 }
 
 .shadow-sm {
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+  box-shadow: 0 0.125rem 0.25rem rgba(5, 5, 5, 0.075) !important;
 }
 
 .shadow {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0 0.5rem 1rem rgba(5, 5, 5, 0.15) !important;
 }
 
 .shadow-lg {
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
+  box-shadow: 0 1rem 3rem rgba(5, 5, 5, 0.175) !important;
 }
 
 .shadow-none {
@@ -9878,7 +9878,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-black-50 {
-  color: rgba(0, 0, 0, 0.5) !important;
+  color: rgba(5, 5, 5, 0.5) !important;
 }
 
 .text-white-50 {
@@ -9977,7 +9977,7 @@ h3 {
   }
 
   .badge {
-    border: 1px solid #000;
+    border: 1px solid #050505;
   }
 
   .table {
@@ -10557,6 +10557,34 @@ form a {
 
 .appearance-font-color-green {
   color: #00ff00;
+}
+
+.appearance-font-color-orange {
+  color: #f6993f;
+}
+
+.appearance-font-color-pink {
+  color: #f66d9b;
+}
+
+.appearance-font-color-purple {
+  color: #5741d9;
+}
+
+.appearance-font-color-white {
+  color: #f6f7f9;
+}
+
+.appearance-font-color-black {
+  color: #050505;
+}
+
+.appearance-font-color-spacegray {
+  color: #343d52;
+}
+
+.appearance-font-color-graydolphin {
+  color: #5c5858;
 }
 
 @media only screen and (max-width: 600px) {
