--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -59,6 +59,10 @@ form {
     }
 }
 
+#form-input-no-underline {
+    border-bottom: none !important;
+}
+
 @media only screen and (max-width: 600px) {
     .eye-text img {
         height: 24px;
