--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10624,6 +10624,18 @@ form a {
   background: #5741d9;
 }
 
+.privacy-direct-messaging {
+  background: #f4f5f7;
+}
+
+.privacy-direct-messaging-item-1:nth-child(1) {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #3490dc;
+  border: 2px solid #333;
+}
+
 @media only screen and (max-width: 600px) {
   .private-profile-main-container {
     height: 100%;
