--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -107,8 +107,10 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: $blue;
     border: 2px solid #333;
+}
+.privacy-circle-active {
+    background: $blue;
 }
 
 .privacy-icon {
