building out privacy comp

--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -99,7 +99,7 @@
     background: $purple;
 }
 
-.privacy-direct-messaging {
+.privacy-content-bg {
     background: $profile-sidebar-light-bg;
 }
 
