--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10628,6 +10628,10 @@ form a {
   background: #f4f5f7;
 }
 
+.privacy-content-bg:hover {
+  cursor: pointer;
+}
+
 .privacy-circle {
   height: 20px;
   width: 20px;
