--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -36,7 +36,7 @@
     width: 100%;
     //margin-top: 1.5rem;
 
-    .test {
+    .section-2-swipe {
         overflow: hidden;
     }
 
@@ -137,7 +137,7 @@
     .section-2 {
         // height: 1100px;
 
-        .test {
+        .section-2-swipe {
             flex-wrap: nowrap !important;
             z-index: 9 !important;
             overflow-x: scroll !important;
