building out search component

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10115,6 +10115,9 @@ form textarea {
 form a {
   text-decoration: none !important;
 }
+form .player-search-select {
+  background: #fff;
+}
 
 #form-input-no-underline {
   border-bottom: none !important;
