--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -57,6 +57,10 @@ form {
     a {
         text-decoration: none !important;
     }
+
+    .player-search-select {
+        background: #fff;
+    }
 }
 
 #form-input-no-underline {
