building out search component

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10063,6 +10063,12 @@ nav .dropdown-item {
   height: 1px;
 }
 
+.search-modal-divider {
+  background: #dddee4;
+  width: 100%;
+  height: 1px;
+}
+
 .main-blue {
   color: #4d89ff;
 }
