--- a/resources/sass/pages/_private_profile.scss
+++ b/resources/sass/pages/_private_profile.scss
@@ -32,8 +32,8 @@
 }
 
 .chat-preview-photo {
-    height: 64px;
-    width: 64px;
+    height: 72px;
+    width: 72px;
     border-radius: 50%;
     object-fit: cover;
     object-position: center;
@@ -119,6 +119,14 @@
 .privacy-icon {
     height: 24px;
     width: 24px;
+}
+
+.private-profile-preview-head-item-2 {
+    max-width: 50%;
+}
+
+.private-profile-preview-head-item-2-gamertag {
+    font-size: 20px;
 }
 
 @media only screen and (max-width: 768px) {
