--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10704,15 +10704,27 @@ form .player-search-select {
   text-decoration: none;
   color: #ed4245;
 }
+.private-profile-preview-social-links-red:hover img {
+  border: 2px solid #ed4245;
+  border-radius: 50%;
+}
 
 .private-profile-preview-social-links-blue:hover {
   text-decoration: none;
   color: #3490dc;
 }
+.private-profile-preview-social-links-blue:hover img {
+  border: 2px solid #3490dc;
+  border-radius: 50%;
+}
 
 .private-profile-preview-social-links-green:hover {
   text-decoration: none;
   color: #00ff00;
+}
+.private-profile-preview-social-links-green:hover img {
+  border: 2px solid #00ff00;
+  border-radius: 50%;
 }
 
 .private-profile-preview-social-links-orange:hover {
@@ -10727,6 +10739,10 @@ form .player-search-select {
 .private-profile-preview-social-links-pink:hover {
   text-decoration: none;
   color: #f66d9b;
+}
+.private-profile-preview-social-links-pink:hover img {
+  border: 2px solid #f66d9b;
+  border-radius: 50%;
 }
 
 .private-profile-preview-social-links-purple:hover {
